manifests/03-middleware-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-shop
  namespace: demo
spec:
  stripPrefixRegex:
    regex:
      - "^/shop"
