manifests/04-podinfo-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-v2
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
      version: v2
  template:
    metadata:
      labels:
        app: podinfo
        version: v2
    spec:
      enableServiceLinks: false
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.7.0
          ports:
            - name: http
              containerPort: 9898
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-v2
  namespace: demo
spec:
  selector:
    app: podinfo
    version: v2
  ports:
    - name: http
      port: 9898
      targetPort: http
