manifests/30-gateway-shared.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web
  namespace: infra
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      hostname: "*.podinfo.lab"
      allowedRoutes:
        namespaces:
          from: All
