manifests/40-gateway-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web
  namespace: infra
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      hostname: "*.podinfo.lab"
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 443
      protocol: HTTPS
      hostname: "*.podinfo.lab"
      tls:
        mode: Terminate
        certificateRefs:
          - name: podinfo-tls
            namespace: infra
      allowedRoutes:
        namespaces:
          from: All
