manifests/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: demo
spec:
  ingressClassName: traefik
  rules:
    - host: podinfo.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo-v1
                port:
                  number: 9898
