manifests/05-ingress-canary.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo-canary
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`podinfo.lab`) && PathPrefix(`/shop`)
      kind: Rule
      middlewares:
        - name: strip-shop
      services:
        - name: podinfo-v1
          port: 9898
          weight: 90
        - name: podinfo-v2
          port: 9898
          weight: 10
    - match: Host(`podinfo.lab`)
      kind: Rule
      services:
        - name: podinfo-v1
          port: 9898
          weight: 90
        - name: podinfo-v2
          port: 9898
          weight: 10
