manifests/21-grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: podinfo-grpc
  namespace: demo
spec:
  parentRefs:
    - name: web
      namespace: infra
      sectionName: web
  hostnames:
    - "grpc.podinfo.lab"
  rules:
    - matches:
        - method:
            service: grpc.health.v1.Health
            method: Check
        - method:
            service: grpc.reflection.v1.ServerReflection
        - method:
            service: grpc.reflection.v1alpha.ServerReflection
      backendRefs:
        - name: podinfo-grpc
          port: 9999
